# HW3

./: .gitignore  CMakeLists.txt  README  when_if_test.txt  when_output.txt  whenerrors_output.txt
wci/frontend/pascal/: PascalError.cpp  PascalError.h  PascalToken.cpp  PascalToken.h
wci/frontend/pascal/parsers/: StatementParser.cpp  WhenStatementParser.cpp  WhenStatementParser.h
wci/frontend/pascal/tokens/: PascalSpecialSymbolToken.cpp
